fixes gap between image header visible in IE

--- a/main.scss
+++ b/main.scss
@@ -546,11 +546,12 @@ a.button.blue:active {
 
 
 div.contrastmask2 {
-	bottom: 10px;
+	bottom:0px; 
+	///bottom: 10px;
 	height: 500px;
 	z-index:2;
 	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,1) 100%); /* W3C */
-
+	
 }
 
 
@@ -1174,6 +1175,7 @@ div.navWrapper .menu {
 mask-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 34%,rgba(0,0,0,1) 63%,rgba(0,0,0,1) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 -webkit-transform: translateZ(0);
+-ms-transform: translate3d(0,0,0);
 }
 
 .Firefox .collegeFeature .slideBlurImage {
